# DisassembleImage

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TARGET_MACHINE_CHECKLIST.md  main  main.cpp  okokok.txt  qaz.txt  right.txt  right_scaleplate.txt  test.txt  vcpkg.json  yaleok.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: windows-ci.yml  windows-release.yml
app/windows/: AppMain.cpp  CMakeLists.txt  EnvironmentCheck.cpp  EnvironmentCheck.h  MainWindow.cpp  MainWindow.h  Preview3DWidget.cpp  Preview3DWidget.h  PreviewGalleryWidget.cpp  PreviewGalleryWidget.h  PreviewImagePane.cpp  PreviewImagePane.h  RunController.cpp  RunController.h  TaskFormState.cpp  TaskFormState.h  TaskFormValidator.cpp  TaskFormValidator.h  TaskPresetStore.cpp  TaskPresetStore.h  TaskRunSession.cpp  TaskRunSession.h
cmake/: VcpkgToolchain.cmake  VcpkgWorkspaceToolchain.cmake  WindowsDeploy.cmake  WindowsDeployOverride.cmake  WindowsDeployRunner.cmake  WindowsDeployRunnerOverride.cmake
core/: CMakeLists.txt
core/engine/: CpuDisassemblyRunner.cpp  CpuDisassemblyRunner.h
core/gpu/: GpuBackendInfo.cpp  GpuBackendInfo.h
core/io/: ImageCatalog.cpp  ImageCatalog.h  LegacyTextConfigLoader.cpp  LegacyTextConfigLoader.h
core/model/: FacePositionPrefix.cpp  FacePositionPrefix.h  ObjModel.cpp  ObjModel.h  PreviewGalleryItem.h  PreviewMesh.cpp  PreviewMesh.h  ProcessingTask.h  ProcessingTypes.h  RunProgress.h  RunResult.h  SlicePlan.cpp  SlicePlan.h
legacy/cli/: CMakeLists.txt  main.cpp
mask/: CMakeLists.txt  mask.cpp  mask.h
player_settings_factory/: CMakeLists.txt  player_settings.cpp  player_settings.h
point_uv/: CMakeLists.txt  point_uv.cpp  point_uv.h
prototypes/: RISKS.md
prototypes/imgui/: CMakeLists.txt  main.cpp
prototypes/opencl/: CMakeLists.txt  kernel.cl  main.cpp
server_info/: CMakeLists.txt  server_info.cpp  server_info.h
tests/: CMakeLists.txt
tests/smoke/: Phase1Smoke.cpp  Phase2ConfigSmoke.cpp  Phase3Smoke.cpp  Phase4Smoke.cpp  Phase5Smoke.cpp
welcome_regulation/: CMakeLists.txt  welcome_regulation.cpp  welcome_regulation.h
